--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-template-maths
 django-htmx
 django-widget-tweaks
 djangorestframework
+django-rest-knox
 markdown
 django-filter
 serializers
